[gd_scene load_steps=6 format=3 uid="uid://b0k2bchpemght"]

[ext_resource type="Script" uid="uid://dpt4uy4xk3r82" path="res://scripts/settings.gd" id="1_5p8wc"]
[ext_resource type="Material" uid="uid://shxmlnfeq0t2" path="res://assets/Material/text_material.tres" id="2_r6d6q"]
[ext_resource type="Theme" uid="uid://02jl3acnqg0j" path="res://assets/UISettings/main_menu.tres" id="3_6wm04"]

[sub_resource type="LabelSettings" id="LabelSettings_vue75"]
font_size = 48

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6wm04"]

[node name="Settings" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5p8wc")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 0.49803922)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
material = ExtResource("2_r6d6q")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -105.0
offset_top = 50.0
offset_right = 105.0
offset_bottom = 117.0
grow_horizontal = 2
text = "Settings"
label_settings = SubResource("LabelSettings_vue75")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="."]
material = ExtResource("2_r6d6q")
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -117.0
offset_right = 23.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_6wm04")
theme_override_colors/font_pressed_color = Color(0.29411766, 0.29411766, 0.29411766, 1)
theme_override_colors/font_hover_color = Color(0.5882353, 0.5882353, 0.5882353, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6wm04")
text = "Close Settings"

[node name="MainMenuButton" type="Button" parent="."]
material = ExtResource("2_r6d6q")
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -66.0
offset_right = 23.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_6wm04")
theme_override_colors/font_pressed_color = Color(0.29411766, 0.29411766, 0.29411766, 1)
theme_override_colors/font_hover_color = Color(0.5882353, 0.5882353, 0.5882353, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_6wm04")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6wm04")
text = "Main Menu"

[node name="VolumeSlider" type="HSlider" parent="."]
material = ExtResource("2_r6d6q")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = -109.0
offset_right = 109.5
offset_bottom = -93.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.001
max_value = 1.0
step = 0.1
value = 0.001

[node name="Label" type="Label" parent="VolumeSlider"]
material = ExtResource("2_r6d6q")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.0
offset_top = -39.0
offset_right = 46.0
offset_bottom = -4.0
grow_horizontal = 2
theme = ExtResource("3_6wm04")
text = "Volume"

[node name="MicSensitivitySlider" type="HSlider" parent="."]
material = ExtResource("2_r6d6q")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = -43.0
offset_right = 109.5
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.1
max_value = 30.0
step = 0.1
value = 1.0

[node name="Label" type="Label" parent="MicSensitivitySlider"]
material = ExtResource("2_r6d6q")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -103.0
offset_top = -36.0
offset_right = 103.0
offset_bottom = -1.0
grow_horizontal = 2
theme = ExtResource("3_6wm04")
text = "Sound Sensitivity"

[node name="MinFreqSlider" type="HSlider" parent="."]
material = ExtResource("2_r6d6q")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = 25.0
offset_right = 109.5
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
min_value = 65.41
max_value = 2092.0
value = 65.41

[node name="Label" type="Label" parent="MinFreqSlider"]
material = ExtResource("2_r6d6q")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = -37.0
offset_right = 125.0
offset_bottom = -2.0
grow_horizontal = 2
theme = ExtResource("3_6wm04")
text = "Minimum Frequency"

[node name="MaxFreqSlider" type="HSlider" parent="."]
material = ExtResource("2_r6d6q")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = 92.0
offset_right = 109.5
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
min_value = 65.42
max_value = 2093.0
value = 2093.0

[node name="Label" type="Label" parent="MaxFreqSlider"]
material = ExtResource("2_r6d6q")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -127.0
offset_top = -38.0
offset_right = 128.0
offset_bottom = -3.0
grow_horizontal = 2
theme = ExtResource("3_6wm04")
text = "Maximum Frequency"

[node name="MicToggle" type="CheckButton" parent="."]
material = ExtResource("2_r6d6q")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 133.0
offset_right = -81.0
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MicToggle"]
material = ExtResource("2_r6d6q")
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -17.0
offset_right = 205.0
offset_bottom = 18.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("3_6wm04")
text = "Use Microphone"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="MicSensitivitySlider" to="." method="_on_mic_sensitivity_slider_value_changed"]
[connection signal="value_changed" from="MinFreqSlider" to="." method="_on_min_freq_slider_value_changed"]
[connection signal="value_changed" from="MaxFreqSlider" to="." method="_on_max_freq_slider_value_changed"]
[connection signal="toggled" from="MicToggle" to="." method="_on_mic_toggle_toggled"]
